自動撥放功能 index.js

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <div class="level-container" id="levelButtons"></div>
 
 <h2 id="wordListTitle" style="text-align: center; margin-bottom: 10px; display: none;"></h2>
+<button id="autoPlayBtn" class="button" onclick="toggleAutoPlay()">自動播放</button>
 
 <!-- 單字列表容器 -->
 <div class="container">
