--- a/quiz.html
+++ b/quiz.html
@@ -23,6 +23,7 @@
             <div class="button-container">
                 <button class="back-button" onclick="returnToSourcePage()">Back</button>
                 <button id="startFilteredQuizBtn" class="button">Start Quiz</button>
+                <button id="startRewordQuizBtn" class="button">Reword Quiz</button> <!-- 新增按鈕 -->
             </div>
             <div class="alphabet-container" id="alphabetButtons"></div>
             <div class="category-container" id="categoryButtons"></div>
@@ -57,6 +58,19 @@
     </div>
 </div>
 
+<!-- Reword Quiz 測驗區 -->
+<div id="rewordQuizArea" style="display: none;">
+    <button id="cancelRewordQuizBtn" class="back-button" onclick="returnToCategorySelection()">Cancel</button>
+    <div id="rewordHint"></div>
+    <div id="rewordConstructionArea" class="construction-area"></div>
+    <div id="rewordLetterBlocksContainer" class="word-blocks-container"></div>
+    <div class="button-group">
+        <button id="playRewordAudioBtn" class="button">🔊 播放</button>
+        <button id="submitRewordBtn" class="button" onclick="submitRewordAnswer()">提交</button>
+        <button id="nextRewordBtn" class="button" onclick="goToNextReword()" style="display: none;">下一題</button>
+        <button class="button" onclick="finishRewordQuiz()">完成測驗</button>
+    </div>
+</div>
 
         <!-- 單字測驗區 -->
         <div id="quizArea" style="display: none;">
