--- a/quiz.html
+++ b/quiz.html
@@ -22,7 +22,7 @@
         <div id="quizCategories" style="display: none;">
             <div class="button-container">
                 <button class="back-button" onclick="returnToSourcePage()">Back</button>
-                <button id="startFilteredQuizBtn" class="button">Start Quiz</button>
+                <button id="startFilteredQuizBtn" class="button">Word Quiz</button>
                 <button id="startRewordQuizBtn" class="button">Reword Quiz</button> <!-- 新增按鈕 -->
             </div>
             <div class="alphabet-container" id="alphabetButtons"></div>
@@ -35,7 +35,7 @@
         <div id="sentenceQuizCategories" style="display: none;">
             <div class="button-container">
                 <button class="back-button" onclick="returnToSourcePage()">Back</button>
-                <button id="startSentenceQuizBtn" class="button">Start Quiz</button>
+                <button id="startSentenceQuizBtn" class="button">Word Quiz</button>
                 <button id="startReorganizeQuizBtn" class="button">Reorganize Quiz</button>
             </div>
             <div class="category-container" id="sentenceCategoryButtons"></div>
