--- a/index.html
+++ b/index.html
@@ -16,50 +16,57 @@
         <button id="sentencePageBtn" class="button">句子頁面</button>
         <button id="startQuizBtn" class="button">句子測驗</button>
     </div>
-    <div class="alphabet-container">
-        <script>
-            document.write("ABCDEFGHIJKLMNOPQRSTUVWXYZ".split("").map(l => 
-                `<button class='letter-btn' onclick='showWords("letter", "${l.toLowerCase()}")'>${l}</button>`
-            ).join(" "));
-        </script>
+
+    <div class="collapsible-section-wrapper">
+        <div class="collapsible-section">
+            <button type="button" class="collapsible-header">字母分類</button>
+            <div class="collapsible-content" id="alphabetButtons">
+                </div>
+        </div>
+
+        <div class="collapsible-section">
+            <button type="button" class="collapsible-header">主分類</button>
+            <div class="collapsible-content" id="primaryCategoryButtons">
+                </div>
+        </div>
+
+        <div class="collapsible-section">
+            <button type="button" class="collapsible-header">次分類</button>
+            <div class="collapsible-content" id="secondaryCategoryButtons">
+                </div>
+        </div>
+
+        <div class="collapsible-section">
+            <button type="button" class="collapsible-header">特殊分類</button>
+            <div class="collapsible-content" id="specialCategoryButtons">
+                </div>
+        </div>
+
+        <div class="collapsible-section">
+            <button type="button" class="collapsible-header">等級分類</button>
+            <div class="collapsible-content" id="levelButtonsContent">
+                </div>
+        </div>
     </div>
-
-<!-- 顯示分類的容器 -->
-<div class="category-container" id="categoryButtons"></div>
-
-<!-- 顯示checkednote分類的容器 -->
-<div class="checkednote-category-container" id="checkednoteCategoryButtons"></div>
-
-<!-- 顯示 Note 分類的容器 -->
-<div class="note-category-container" id="noteCategoryButtons"></div>
-
-
-<!-- 顯示級別的容器 -->
-<div class="level-container" id="levelButtons"></div>
-
-<h2 id="wordListTitle" style="text-align: center; margin-bottom: 10px; display: none;"></h2>
+    <h2 id="wordListTitle" style="text-align: center; margin-bottom: 10px; display: none;"></h2>
 <button id="autoPlayBtn" class="button" onclick="toggleAutoPlay()">單字自動播放</button>
 
-<!-- 單字列表容器 -->
 <div class="container">
     <div id="wordList" class="word-list">
         <button class="button back-button" onclick="backToFirstLayer()">Back</button>
         <div id="wordItems"></div>
     </div>
 
-    <!-- 單字詳情頁面 -->
-<div id="wordDetails" class="details">
+    <div id="wordDetails" class="details">
     <div class="button-group">
         <button class="button" onclick="backToWordList()">Back</button>
         <button id="autoPlayDetailsBtn" class="button" onclick="toggleAutoPlay()">內文自動播放</button>
     </div>
 
-        <!-- 單字解釋區塊 -->
         <div id="phoneticContainer"></div>
         <div id="chineseContainer"></div>
         <div id="meaningContainer"></div>
 
-        <!-- 播放控制按鈕 -->
         <div class="audio-controls-wrapper">
             <div class="audio-controls">
                 <button class="audio-btn" id="playAudioBtn">
@@ -81,22 +88,18 @@
             </div>
         </div>
 
-        <!-- 搜尋框 -->
         <div id="searchInDetails" style="text-align: center; margin-bottom: 10px; display: flex; align-items: center; gap: 10px;">
             <input type="text" id="searchInputDetails" placeholder="輸入單字搜尋..." oninput="filterWordsInDetails()" style="font-size: 16px; padding: 5px; width: 200px;">
             <button id="bButton" class="button">B</button>
         </div>
 
-        <!-- 搜尋結果 -->
         <div id="searchResultsDetails" style="max-height: 200px; overflow-y: auto; text-align: left;"></div>
 
-        <!-- 筆記區塊 -->
         <div id="noteContainer">
             <textarea id="wordNote" placeholder="輸入筆記..." style="width: 100%; height: 80px;" oninput="updateCheckbox()"></textarea>
             <p id="savedNote"></p>
         </div>
 
-        <!-- 勾選框與匯出、匯入按鈕 -->
         <div id="storageButtons">
             <div class="note-buttons-inner">
                 <input type="checkbox" id="noteCheckbox" onclick="handleCheckboxClick()">
@@ -109,8 +112,6 @@
         </div>
     </div>
 </div>
-
-
     
     <script src="index.js" defer></script>
 </body>
