--- a/index.html
+++ b/index.html
@@ -4,7 +4,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Boyd Vocabulary</title>
     <link rel="stylesheet" href="index.css">
-</head>
+    
+    <style>
+        html, body {
+            /* 隱藏水平方向的滾動條 */
+            overflow-x: hidden;
+            /* 確保寬度不會超過螢幕 */
+            width: 100%;
+        }
+    </style>
+    </head>
 <body>
     <h1>Boyd Vocabulary</h1>
     <div id="searchContainer" style="text-align: center; margin-bottom: 15px;">
