更新載入訊息

--- a/quiz.html
+++ b/quiz.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="quiz.css">
 </head>
 <body>
+        <div id="loadingOverlay">
+        <div class="spinner"></div>
+    </div>
+
+    <div id="toastNotification"></div>
+    
     <h1>測驗區</h1>
 
     <div class="button-container" style="text-align: center; margin-top: 20px; margin-bottom: 15px;">
