--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
     </style>
     </head>
 <body>
+    <div id="loading-overlay">
+        <div class="loading-spinner"></div>
+        <p class="loading-text">資料載入中，請稍候...</p>
+    </div>
+
+    <div id="notification-container"></div>
+    
     <h1>Boyd Vocabulary</h1>
     <div id="searchContainer" style="text-align: center; margin-bottom: 15px;">
         <input type="text" id="searchInput" placeholder="輸入單字搜尋..." oninput="filterWords()" style="padding: 8px; width: 200px;">
