--- a/sentence.html
+++ b/sentence.html
@@ -6,6 +6,12 @@
     <link rel="stylesheet" href="sentence.css">
 </head>
 <body>
+        <div id="loading-overlay">
+        <div class="loading-spinner"></div>
+        <p class="loading-text">資料載入中，請稍候...</p>
+    </div>
+
+    <div id="notification-container"></div>
     <h1>Boyd Vocabulary</h1>
 
     <div id="searchContainer" style="text-align: center; margin-bottom: 15px;">
