分類功能更新index.js

--- a/index.html
+++ b/index.html
@@ -23,111 +23,110 @@
     <div id="notification-container"></div>
     
     <h1>Boyd Vocabulary</h1>
-    <div id="searchContainer" style="text-align: center; margin-bottom: 15px;">
-        <input type="text" id="searchInput" placeholder="輸入單字搜尋..." oninput="filterWords()" style="padding: 8px; width: 200px;">
+    <div id="mainPageContainer">
+        <div id="searchContainer" style="text-align: center; margin-bottom: 15px;">
+            <input type="text" id="searchInput" placeholder="輸入單字搜尋..." oninput="filterWords()" style="padding: 8px; width: 200px;">
+        </div>
+        <div class="button-container" style="text-align: center; margin-top: 20px;">
+            <button id="wordPageBtn" class="button" style="background-color: #28a745;">單字頁面</button>
+            <button id="wordQuizBtn" class="button" onclick="window.location.href='quiz.html?show=categories&from=index'">單字測驗</button>
+            <button id="sentencePageBtn" class="button">句子頁面</button>
+            <button id="startQuizBtn" class="button">句子測驗</button>
+        </div>
+
+        <div class="collapsible-section-wrapper">
+            <div class="collapsible-section">
+                <button type="button" class="collapsible-header">字母分類</button>
+                <div class="collapsible-content" id="alphabetButtons">
+                </div>
+            </div>
+
+            <div class="collapsible-section">
+                <button type="button" class="collapsible-header">主分類</button>
+                <div class="collapsible-content" id="primaryCategoryButtons">
+                </div>
+            </div>
+
+            <div class="collapsible-section">
+                <button type="button" class="collapsible-header">特殊分類</button>
+                <div class="collapsible-content" id="specialCategoryButtons">
+                </div>
+            </div>
+
+            <div class="collapsible-section">
+                <button type="button" class="collapsible-header">等級分類</button>
+                <div class="collapsible-content" id="levelButtonsContent">
+                </div>
+            </div>
+        </div>
+
+        <div class="start-learning-container">
+            <button id="startLearningBtn" class="button">開始學習</button>
+        </div>
     </div>
-    <div class="button-container" style="text-align: center; margin-top: 20px;">
-        <button id="wordPageBtn" class="button" style="background-color: #28a745;">單字頁面</button>
-        <button id="wordQuizBtn" class="button" onclick="window.location.href='quiz.html?show=categories&from=index'">單字測驗</button>
-        <button id="sentencePageBtn" class="button">句子頁面</button>
-        <button id="startQuizBtn" class="button">句子測驗</button>
-    </div>
 
-    <div class="collapsible-section-wrapper">
-        <div class="collapsible-section">
-            <button type="button" class="collapsible-header">字母分類</button>
-            <div class="collapsible-content" id="alphabetButtons">
-                </div>
-        </div>
-
-        <div class="collapsible-section">
-            <button type="button" class="collapsible-header">主分類</button>
-            <div class="collapsible-content" id="primaryCategoryButtons">
-                </div>
-        </div>
-
-        <div class="collapsible-section">
-            <button type="button" class="collapsible-header">次分類</button>
-            <div class="collapsible-content" id="secondaryCategoryButtons">
-                </div>
-        </div>
-
-        <div class="collapsible-section">
-            <button type="button" class="collapsible-header">特殊分類</button>
-            <div class="collapsible-content" id="specialCategoryButtons">
-                </div>
-        </div>
-
-        <div class="collapsible-section">
-            <button type="button" class="collapsible-header">等級分類</button>
-            <div class="collapsible-content" id="levelButtonsContent">
-                </div>
-        </div>
-    </div>
     <h2 id="wordListTitle" style="text-align: center; margin-bottom: 10px; display: none;"></h2>
-<button id="autoPlayBtn" class="button" onclick="toggleAutoPlay()">單字自動播放</button>
+    <button id="autoPlayBtn" class="button" onclick="toggleAutoPlay()">單字自動播放</button>
 
-<div class="container">
-    <div id="wordList" class="word-list">
-        <button class="button back-button" onclick="backToFirstLayer()">Back</button>
-        <div id="wordItems"></div>
-    </div>
+    <div class="container">
+        <div id="wordList" class="word-list">
+            <button class="button back-button" onclick="backToFirstLayer()">Back</button>
+            <div id="wordItems"></div>
+        </div>
 
-    <div id="wordDetails" class="details">
-    <div class="button-group">
-        <button class="button" onclick="backToWordList()">Back</button>
-        <button id="autoPlayDetailsBtn" class="button" onclick="toggleAutoPlay()">內文自動播放</button>
-    </div>
+        <div id="wordDetails" class="details">
+            <div class="button-group">
+                <button class="button" onclick="backToWordList()">Back</button>
+                <button id="autoPlayDetailsBtn" class="button" onclick="toggleAutoPlay()">內文自動播放</button>
+            </div>
 
-        <div id="phoneticContainer"></div>
-        <div id="chineseContainer"></div>
-        <div id="meaningContainer"></div>
+            <div id="phoneticContainer"></div>
+            <div id="chineseContainer"></div>
+            <div id="meaningContainer"></div>
 
-        <div class="audio-controls-wrapper">
-            <div class="audio-controls">
-                <button class="audio-btn" id="playAudioBtn">
-                    <img src="https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/play.svg" 
-                         alt="Play" width="24" height="24" />
-                </button>
-                <button class="audio-btn" onclick="adjustAudioTime(-5)">
-                    <img src="https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/rewind.svg" 
-                         alt="Rewind" width="24" height="24" />
-                </button>
-                <button class="audio-btn" id="pauseResumeBtn" onclick="togglePauseAudio(this)">
-                    <img src="https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/pause.svg" 
-                         alt="Pause" width="24" height="24" />
-                </button>
-                <button class="audio-btn" onclick="adjustAudioTime(5)">
-                    <img src="https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/fast-forward.svg" 
-                         alt="Fast Forward" width="24" height="24" />
-                </button>
+            <div class="audio-controls-wrapper">
+                <div class="audio-controls">
+                    <button class="audio-btn" id="playAudioBtn">
+                        <img src="https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/play.svg" 
+                             alt="Play" width="24" height="24" />
+                    </button>
+                    <button class="audio-btn" onclick="adjustAudioTime(-5)">
+                        <img src="https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/rewind.svg" 
+                             alt="Rewind" width="24" height="24" />
+                    </button>
+                    <button class="audio-btn" id="pauseResumeBtn" onclick="togglePauseAudio(this)">
+                        <img src="https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/pause.svg" 
+                             alt="Pause" width="24" height="24" />
+                    </button>
+                    <button class="audio-btn" onclick="adjustAudioTime(5)">
+                        <img src="https://raw.githubusercontent.com/BoydYang-Designer/English-vocabulary/main/Svg/fast-forward.svg" 
+                             alt="Fast Forward" width="24" height="24" />
+                    </button>
+                </div>
+            </div>
+
+            <div id="searchInDetails" style="text-align: center; margin-bottom: 10px; display: flex; align-items: center; gap: 10px;">
+                <input type="text" id="searchInputDetails" placeholder="輸入單字搜尋..." oninput="filterWordsInDetails()" style="font-size: 16px; padding: 5px; width: 200px;">
+                <button id="bButton" class="button">B</button>
+            </div>
+
+            <div id="searchResultsDetails" style="max-height: 200px; overflow-y: auto; text-align: left;"></div>
+
+            <div id="noteContainer">
+                <textarea id="wordNote" placeholder="輸入筆記..." style="width: 100%; height: 80px;" oninput="updateCheckbox()"></textarea>
+                <p id="savedNote"></p>
+            </div>
+
+            <div id="storageButtons">
+                <div class="note-buttons-inner">
+                    <input type="checkbox" id="noteCheckbox" onclick="handleCheckboxClick()">
+                    <button onclick="saveNote()" id="saveNoteButton" class="note-button">Save Note</button>
+                    <button onclick="exportAllData()" id="exportButton" class="note-button">Export</button>
+                    <button onclick="importAllData()" id="importButton" class="note-button">Import</button>
+                </div>
             </div>
         </div>
-
-        <div id="searchInDetails" style="text-align: center; margin-bottom: 10px; display: flex; align-items: center; gap: 10px;">
-            <input type="text" id="searchInputDetails" placeholder="輸入單字搜尋..." oninput="filterWordsInDetails()" style="font-size: 16px; padding: 5px; width: 200px;">
-            <button id="bButton" class="button">B</button>
-        </div>
-
-        <div id="searchResultsDetails" style="max-height: 200px; overflow-y: auto; text-align: left;"></div>
-
-        <div id="noteContainer">
-            <textarea id="wordNote" placeholder="輸入筆記..." style="width: 100%; height: 80px;" oninput="updateCheckbox()"></textarea>
-            <p id="savedNote"></p>
-        </div>
-
-        <div id="storageButtons">
-            <div class="note-buttons-inner">
-                <input type="checkbox" id="noteCheckbox" onclick="handleCheckboxClick()">
-                <button onclick="saveNote()" id="saveNoteButton" class="note-button">Save Note</button>
-                <button onclick="exportAllData()" id="exportButton" class="note-button">Export</button>
-                <button onclick="importAllData()" id="importButton" class="note-button">Import</button>
-            </div>
-        </div>
-        </div>
-        </div>
     </div>
-</div>
     
     <script src="index.js" defer></script>
 </body>
