--- a/sentence.html
+++ b/sentence.html
@@ -57,9 +57,9 @@
     <div class="container">
         <div id="wordList" class="word-list" style="display: none;">
             <button class="button back-button" onclick="backToFirstLayer()">Back</button>
+            <button id="showSelectedSentencesBtn" class="button" style="display: none; width: 80%; margin: 10px auto; background-color: #28a745;">顯示選定單字的句子</button>
             <div id="wordItems"></div>
         </div>
-
         <div id="sentenceList" class="word-list" style="display: none;">
             <button class="button back-button" onclick="backToFirstLayer()">Back</button>
             <div id="sentenceItems"></div>
