--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
                 </div>
             </div>
 
+            <div class="button-container" style="margin-top: 15px; margin-bottom: 5px;">
+                <button id="sentenceLinkBtn" class="button">句子</button>
+            </div>
             <div id="searchInDetails" style="text-align: center; margin-bottom: 10px; display: flex; align-items: center; gap: 10px;">
                 <input type="text" id="searchInputDetails" placeholder="輸入單字搜尋..." oninput="filterWordsInDetails()" style="font-size: 16px; padding: 5px; width: 200px;">
                 <button id="bButton" class="button">B</button>
@@ -111,7 +114,7 @@
             <div id="searchResultsDetails" style="max-height: 200px; overflow-y: auto; text-align: left;"></div>
 
             <div id="noteContainer">
-                <textarea id="wordNote" placeholder="輸入筆記..." style="width: 100%; height: 80px;" oninput="updateCheckbox()"></textarea>
+                <textarea id="wordNote" placeholder="輸入筆記..." style="width: 100%; height: 60px;" oninput="updateCheckbox()"></textarea>
                 <p id="savedNote"></p>
             </div>
 
